--- a/roles/hadoop_master/templates/mapred-site.xml.template
+++ b/roles/hadoop_master/templates/mapred-site.xml.template
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <?xml-stylesheet type="text/xsl" href="configuration.xsl"?>
 <!--
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,9 +17,9 @@
 <!-- Put site-specific property overrides in this file. -->
 
 <configuration>
- <property>
-  <name>fs.defaultFS</name>
-  <value>hdfs://hadoop1:9000</value>
- </property>
+  <property>
+    <name>mapred.job.tracker</name>
+    <value>hadoop1</value>
+  </property>
 </configuration>
 
