--- a/main.yml
+++ b/main.yml
@@ -7,31 +7,24 @@
   roles:
 #    - main_node
 
-- name: Install hadoop env
+- name: Install env
   hosts: hadoop
   sudo: yes
  
 
   roles:
     - thirdparty
-#    - hadoop
-#    - hadoop_master
-#    - hadoop_slave
-#    - hbase
   environment:
     http_proxy: http://{{ proxy_server }}:3128
     https_proxy: http://{{ proxy_server }}:3128
 
-- name: configure hadoop master
-  hosts: main_node
+
+- name: Install hadoop
+  hosts: hadoop
   sudo: yes
+
 
   roles:
-    - hadoop_master
-
-- name: configure hadoop slaves
-  hosts: slave_node
-  sudo: yes
-
-  roles: 
+    - hadoop
     - hadoop_slave
+    - hadoop_master
