--- a/roles/hadoop_master/templates/hdfs-site.xml.template
+++ b/roles/hadoop_master/templates/hdfs-site.xml.template
@@ -18,12 +18,21 @@
 
 <configuration>
   <property>
-    <name>dfs.replication</name>
-    <value>2</value>
+    <name>dfs.namenode.name.dir</name>
+    <value>file:///u02/hadoop-{{ hadoop_version }}/hadoop_data/hdfs/namenode</value>
   </property>
   <property>
-    <name>dfs.namenode.name.dir</name>
-    <value>file:/u02/hadoop-{{ hadoop_version }}/hadoop_data/hdfs/namenode</value>
+    <name>dfs.namenode.data.dir</name>
+    <value>file:///u02/hadoop-{{ hadoop_version }}/hadoop_data/hdfs/datanode</value>
+  </property>
+  <property>
+    <name>dfs.namenode.checkpoint.dir</name>
+    <value>file:///u02/hadoop-{{ hadoop_version }}/hadoop_data/hdfs/checkpoint</value>
+  </property>
+
+  <property>
+    <name>dfs.replication</name>
+    <value>3</value>
   </property>
 </configuration>
 
