--- a/roles/hadoop_master/templates/yarn-site.xml.template
+++ b/roles/hadoop_master/templates/yarn-site.xml.template
@@ -21,17 +21,9 @@
     <name>yarn.nodemanager.aux-services.mapreduce.shuffle.class</name>
     <value> org.apache.hadoop.mapred.ShuffleHandler</value>
   </property>
-  <property>
-    <name>yarn.resourcemanager.resource-tracker.address</name>
-    <value>hadoop1:8025</value>
-  </property>
-  <property>
-    <name>yarn.resourcemanager.scheduler.address</name>
-    <value>hadoop1:8030</value>
-  </property>
-  <property>
-    <name>yarn.resourcemanager.address</name>
-    <value>hadoop1:8050</value>
-  </property>
+  <property><name>yarn.resourcemanager.resource-tracker.address</name><value>hadoop1</value></property>
+  <property><name>yarn.resourcemanager.scheduler.address</name><value>hadoop1</value></property>
+  <property><name>yarn.resourcemanager.address</name><value>hadoop1</value></property>
+  <property><name>yarn.resourcemanager.hostname</name><value>hadoop1</value></property>
 </configuration>
 
