--- a/roles/hadoop_slave/templates/core-site.xml.template
+++ b/roles/hadoop_slave/templates/core-site.xml.template
@@ -19,7 +19,7 @@
 <configuration>
  <property>
   <name>fs.defaultFS</name>
-  <value>hdfs://localhost:9000</value>
+  <value>hdfs://hadoop1:8020</value>
  </property>
 </configuration>
 
